config/overlay/multi-cluster/virtual-garden/webhook-admission/admission_configurations_url_patch.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
  - clientConfig:
      service: null
      url: https://$(SERVICENAME).$(NAMESPACE).svc/mutate-terminal
    name: mutating-create-update-terminal.gardener.cloud
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
  - clientConfig:
      service: null
      url: https://$(SERVICENAME).$(NAMESPACE).svc/validate-terminal
    name: validating-create-update-terminal.gardener.cloud
